# mcp-toolkit

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CUSTOMIZATION.md  DEMO_MODE.md  Dockerfile  Makefile  README.md  SECURITY.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
benchmarks/: RESULTS.md  run_benchmarks.py
demo_data/duplicates/: readme.txt
demo_data/reports/: q1_sales.csv  q2_sales.csv
demo_docs/: api_guide.md  faq.md  glossary.md  quickstart.md  tutorial.md
docs/adr/: 0001-fastmcp-v2-over-raw-protocol.md  0002-six-server-modularity.md  0003-analytics-cost-tracking.md
mcp_toolkit/: __init__.py  analytics.py  cli.py  demo.py
mcp_toolkit/servers/: file_organizer.py  git_insights.py  markdown_kb.py  sqlite_explorer.py  system_monitor.py  task_tracker.py
mcp_toolkit/shared/: registry.py
tests/: conftest.py  test_analytics.py  test_cli.py  test_demo.py  test_file_organizer.py  test_git_insights.py  test_markdown_kb.py  test_registry.py  test_sqlite_explorer.py  test_system_monitor.py  test_task_tracker.py
